# gen_trait

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  gen_trait.bat  gen_trait.py  gen_trait.schema.json  gen_trait.sh  readme.md
sample/: callable.hpp  callable.json  concrete.hpp  drawable.hpp  drawable.json  make_sample.sh  sample.cpp  sample.hpp  sample.json  sendable.hpp  sendable.json
src/: callable.cpp  drawable.cpp
